# Emphatic-Embeddings

./: .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  README.md  empathic_embeddings.py  pyproject.toml  train.py
empathic_embeddings/: __init__.py  api.py  cli.py  compose.py  graph.py  io.py  model.py  utils.py
scripts/: convert_vec.py  inspect_model.py
tests/: conftest.py  test_api.py  test_cli.py  test_compose.py  test_graph.py  test_utils.py
