[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emphatic-embeddings"
version = "0.2.0"
description = "Empathic (Affect-Augmented) Word Embeddings"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "Faruk Alpay"}]
dependencies = [
    "numpy",
    "scipy",
    "typer",
]

[project.optional-dependencies]
dev = ["pytest", "hypothesis", "black", "ruff", "isort", "mypy", "typer[all]"]
viz = ["matplotlib"]
hf = ["transformers"]

[project.urls]
Homepage = "https://github.com/farukalpay/Emphatic-Embeddings"

[project.scripts]
empathic-embeddings = "empathic_embeddings.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["empathic_embeddings"]

[tool.pytest.ini_options]
addopts = "-q"
